Package_Tools/include-C/mgl2/c/in_arbeit/fertig/canvas_cf.h


/// Allow changing size of the picture
void  mgl_parser_allow_setsize(HMPR p, int a);

void  mgl_parser_allow_setsize_(uintptr_t* p, int *a);

/// Allow reading/saving files
void  mgl_parser_allow_file_io(HMPR p, int a);

void  mgl_parser_allow_file_io_(uintptr_t* p, int *a);

/// Allow loading commands from external libraries
void  mgl_parser_allow_dll_call(HMPR p, int a);

void  mgl_parser_allow_dll_call_(uintptr_t* p, int *a);

/// Set flag to stop script parsing
void  mgl_parser_stop(HMPR p);

void  mgl_parser_stop_(uintptr_t* p);

/// Set variant of argument(s) separated by '?' to be used
void  mgl_parser_variant(HMPR p, int var);

void  mgl_parser_variant_(uintptr_t* p, int *var);

/// Set starting object ID
void  mgl_parser_start_id(HMPR p, int id);

void  mgl_parser_start_id_(uintptr_t* p, int *id);



/// Return type of command: 0 - not found, 1 - data plot, 2 - other plot,
///		3 - setup, 4 - data handle, 5 - data create, 6 - subplot, 7 - program
///		8 - 1d plot, 9 - 2d plot, 10 - 3d plot, 11 - dd plot, 12 - vector plot
///		13 - axis, 14 - primitives, 15 - axis setup, 16 - text/legend, 17 - data transform
int  mgl_parser_cmd_type(HMPR pr, const char *name);

int  mgl_parser_cmd_type_(uintptr_t* p, const char *name, int);

/// Return description of MGL command
 const char *mgl_parser_cmd_desc(HMPR pr, const char *name);

/// Return string of command format (command name and its argument[s])
 const char *mgl_parser_cmd_frmt(HMPR pr, const char *name);

/// Get name of command with number n
 const char *mgl_parser_cmd_name(HMPR pr, long id);

/// Get number of defined commands
long  mgl_parser_cmd_num(HMPR pr);


/// Return result of formula evaluation
HMDT  mgl_parser_calc(HMPR pr, const char *formula);

uintptr_t  mgl_parser_calc_(uintptr_t *pr, const char *formula,int);

HMDT  mgl_parser_calcw(HMPR pr, const wchar_t *formula);

/// Return result of formula evaluation as complex data
HADT  mgl_parser_calc_complex(HMPR pr, const char *formula);

uintptr_t  mgl_parser_calc_complex_(uintptr_t *pr, const char *formula,int);

HADT  mgl_parser_calc_complexw(HMPR pr, const wchar_t *formula);