Package_Tools/include-C/mgl2/c/in_arbeit/fertig/canvas_cf.pp

procedure mgl_parser_allow_setsize(p:THMPR; a:longint);cdecl;external;
procedure mgl_parser_allow_setsize_(p:Puintptr_t; a:Plongint);cdecl;external;
{/ Allow reading/saving files }
procedure mgl_parser_allow_file_io(p:THMPR; a:longint);cdecl;external;
procedure mgl_parser_allow_file_io_(p:Puintptr_t; a:Plongint);cdecl;external;
{/ Allow loading commands from external libraries }
procedure mgl_parser_allow_dll_call(p:THMPR; a:longint);cdecl;external;
procedure mgl_parser_allow_dll_call_(p:Puintptr_t; a:Plongint);cdecl;external;
{/ Set flag to stop script parsing }
procedure mgl_parser_stop(p:THMPR);cdecl;external;
procedure mgl_parser_stop_(p:Puintptr_t);cdecl;external;
{/ Set variant of argument(s) separated by '?' to be used }
procedure mgl_parser_variant(p:THMPR; var:longint);cdecl;external;
procedure mgl_parser_variant_(p:Puintptr_t; var:Plongint);cdecl;external;
{/ Set starting object ID }
procedure mgl_parser_start_id(p:THMPR; id:longint);cdecl;external;
procedure mgl_parser_start_id_(p:Puintptr_t; id:Plongint);cdecl;external;
{/ Return type of command: 0 - not found, 1 - data plot, 2 - other plot, }
{/		3 - setup, 4 - data handle, 5 - data create, 6 - subplot, 7 - program }
{/		8 - 1d plot, 9 - 2d plot, 10 - 3d plot, 11 - dd plot, 12 - vector plot }
{/		13 - axis, 14 - primitives, 15 - axis setup, 16 - text/legend, 17 - data transform }
(* Const before type ignored *)
function mgl_parser_cmd_type(pr:THMPR; name:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function mgl_parser_cmd_type_(p:Puintptr_t; name:Pchar; para3:longint):longint;cdecl;external;
{/ Return description of MGL command }
(* Const before type ignored *)
(* Const before type ignored *)
function mgl_parser_cmd_desc(pr:THMPR; name:Pchar):Pchar;cdecl;external;
{/ Return string of command format (command name and its argument[s]) }
(* Const before type ignored *)
(* Const before type ignored *)
function mgl_parser_cmd_frmt(pr:THMPR; name:Pchar):Pchar;cdecl;external;
{/ Get name of command with number n }
(* Const before type ignored *)
function mgl_parser_cmd_name(pr:THMPR; id:longint):Pchar;cdecl;external;
{/ Get number of defined commands }
function mgl_parser_cmd_num(pr:THMPR):longint;cdecl;external;
{/ Return result of formula evaluation }
(* Const before type ignored *)
function mgl_parser_calc(pr:THMPR; formula:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_parser_calc_(pr:Puintptr_t; formula:Pchar; para3:longint):Tuintptr_t;cdecl;external;
(* Const before type ignored *)
function mgl_parser_calcw(pr:THMPR; formula:Pwchar_t):THMDT;cdecl;external;
{/ Return result of formula evaluation as complex data }
(* Const before type ignored *)
function mgl_parser_calc_complex(pr:THMPR; formula:Pchar):THADT;cdecl;external;
(* Const before type ignored *)
function mgl_parser_calc_complex_(pr:Puintptr_t; formula:Pchar; para3:longint):Tuintptr_t;cdecl;external;
(* Const before type ignored *)
function mgl_parser_calc_complexw(pr:THMPR; formula:Pwchar_t):THADT;cdecl;external;
{----------------------------------------------------------------------------- }
{$endif}

implementation


end.
